<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) Meta Platforms, Inc. and affiliates.
    All rights reserved.

    This source code is licensed under the license found in the
    LICENSE file in the root directory of this source tree.
-->

<resources
  xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
  include_native_variations="false"
  >
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: <xliff:g id="user name">%1$s</xliff:g></string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loading">Loading&#8230;</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_share_button_text" description="This is a button. It is located on the home page for all games. Tapping this allows the user to share this game as a post on their timeline.">Share</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as <xliff:g id="user name">%1$s</xliff:g></string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_sso_noapp_title" description="Title for the SSO dialog shown when the Facebook app is not installed on the device">Sign up faster with Facebook</string>
    <string name="com_facebook_sso_noapp_body" description="Body text for the SSO dialog shown when the Facebook app is not installed">Create your account in seconds with Facebook.</string>
    <string name="com_facebook_sso_noapp_not_now" description="Dismiss button text for the SSO dialog">Not now</string>
    <string name="com_facebook_sso_outdated_title" description="Title for the SSO dialog shown when the Facebook app is installed but too old to support SSO">Log in with Facebook</string>
    <string name="com_facebook_sso_outdated_body" description="Body text for the SSO dialog shown when the Facebook app is installed but too old to support SSO">Continue with your Facebook account to get started.</string>
</resources>
